Added the Fevicon icon
Added the Fevicon icon

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <title>Musify.in</title>
+    <link rel="shortcut icon" href="./thumbnails/musical-icon.png" type="image/x-icon">
     <!--External CSS-->
     <link rel="stylesheet" href="./style.css" />
   </head>
